# rust_sgx_example

./: .gitignore  Cargo.toml  Makefile  rust-toolchain
hello-rust-app/: Cargo.toml  build.rs
hello-rust-app/src/: ecall.rs  main.rs  ocall.rs  utils.rs
hello-rust-app/src/utils/: enclave.rs  path.rs
hello-rust-cmov-derive/: Cargo.toml
hello-rust-cmov-derive/src/: lib.rs
hello-rust-core/: Cargo.toml
hello-rust-core/src/: aligned.rs  cmov.rs  example.rs  lib.rs  sort.rs  util.rs
hello-rust-core/src/aligned/: boxed.rs
hello-rust-core/src/cmov/: cnd_option.rs  impl_bool.rs  impl_bytes.rs  impl_tuples.rs  impl_u32_u64_usize.rs  impl_u8_u16.rs  tests.rs
hello-rust-core/src/sort/: tests.rs
hello-rust-enclave/: Cargo.toml  Makefile  config.xml  enclave.edl  enclave.lds
hello-rust-enclave/src/: enclave_code.rs  lib.rs
