[package]
name = "hello-rust-core"
version = "0.1.0"
authors = ["ZHANG Xinyi <csxyzhang@comp.hkbu.edu.hk>"]
edition = "2021"
publish = false

[features]
default = ["std"]
std = [
    "anyhow/std",
    "bitvec/std",
    "serde/std",
    "rand/std",
    "rand_distr/std",
]

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitvec = { version = "1.0", default-features = false, features = ["alloc", "atomic", "serde"] }
derive_more = "0.99"
hello-rust-cmov-derive = { path = "../hello-rust-cmov-derive" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0.2", features = ["alloc"] }
libm = {version = "0.2.6"}

probability = {version = "0.20.1"}
rand = { version = "0.8", default-features = false, features = ["alloc", "std_rng", "simd_support"] }
rand_distr = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.4"
serde_json = "1.0"
static_assertions = "1.1"

[build-dependencies]
cmake = "0.1.31"
